# tidaload

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: release.sh
src/: config.rs  doh.rs  download.rs  http.rs  main.rs  metadata.rs  runner.rs  tidal.rs
