[package]
name = "tidaload"
version = "0.1.6"
edition = "2024"

[dependencies]
aes = "=0.8.4"
anyhow = "=1.0.102"
base64 = "=0.22.1"
cbc = "=0.1.2"
clap = { version = "=4.6.1", features = ["derive"] }
ctr = "=0.9.2"
dirs = "=6.0.0"
futures-util = "=0.3.31"
metaflac = "=0.2.8"
mp4ameta = "=0.13.0"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
roxmltree = "=0.21.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.50.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
toml = "=0.9.12"
url = "=2.5.8"
webbrowser = "=1.0.6"
